Fix vertical-align of notifications

--- a/app/src/scss/_notification.scss
+++ b/app/src/scss/_notification.scss
@@ -9,6 +9,7 @@
     .miniature {
         display: inline-block;
         margin: 0 12px 0 4px;
+        vertical-align: top;
 
         img {
             height: 60px;
